[package]
name = "nmp-app-chirp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-app Chirp glue. Owns the home feed composition, drives it from declared observed projections, and surfaces projected blocks over a static-lib FFI for the iOS shell."

[lib]
name = "nmp_app_chirp"
# Static lib so the iOS shell can link `-lnmp_app_chirp` alongside
# `-lnmp_core`. The crate's `#[no_mangle] extern "C"` symbols
# (`nmp_app_chirp_register`, `nmp_app_chirp_unregister`, etc.) land in their
# own archive because doctrine D0 forbids `nmp-core -> nmp-nip01 /
# nmp-threading`, so we cannot re-export them through `libnmp_core.a` the
# way `android-ffi` does (T146 / ADR-0009).
crate-type = ["staticlib", "rlib"]

[features]
# Default feature set for non-iOS builds (tests, CI, `cargo check`).
# `marmot` is intentionally absent: 5,400 LOC of MLS-over-Nostr is not on the
# v1 critical path and excluded from the default build to keep CI fast.
default = ["wallet", "lmdb-backend"]
# V-38: the `wallet` feature now activates the `nmp-nip47` optional dep
# (the kernel itself no longer carries NIP-47 nouns). Chirp re-exports
# it under the same name so callers (chirp-tui, the iOS shell) keep their
# existing `features = ["wallet"]` spelling.
# NIP-47 Nostr Wallet Connect. V-38: forwards to the new `nmp-nip47` optional
# dep (the kernel itself no longer carries NIP-47 nouns).
wallet = ["dep:nmp-nip47"]
# Persistent local cache / publish-intent ledger for offline-first Chirp.
lmdb-backend = ["nmp-core/lmdb-backend"]
android-ffi = ["nmp-native-runtime/android-ffi"]

[dependencies]
nmp-core = { workspace = true }
# Direct dep on nmp-planner for InterestShape ŌĆö the nmp_core::planner compat
# facade is deleted (#1608).
nmp-planner = { workspace = true }
# Direct dep on nmp-store for PullPage / ScanLogResult / EventStore /
# StoreQuery / StoredEvent ŌĆö the nmp_core::store compat facade is deleted (#1608).
nmp-store = { workspace = true }
# `nmp-native-runtime` owns the `NmpApp` runtime state. Chirp owns the C ABI
# symbols its aggregate archive exposes to native shells.
nmp-native-runtime = { workspace = true, features = ["signer-broker"] }
nmp-nostr-id = { workspace = true }
# Shared Chirp app configuration (default relay bootstrap set). Dependency-free
# app crate; it is the single source of truth for Chirp's relay defaults so the
# iOS/Android/web shells never hardcode relay URLs (D7 / thin-shell). The
# `nmp_app_chirp_seed_*` FFI symbols below wrap `chirp_default_relay_bootstrap`,
# mirroring the Android `nmp-chirp-android-ffi::relay_seeding` glue.
nmp-chirp-config = { path = "../nmp-chirp-config" }
nmp-feed = { workspace = true }
nmp-nip01 = { workspace = true }
nmp-substrate = { workspace = true }
nmp-nip50 = { workspace = true }
nmp-replies = { workspace = true }
nmp-nip18 = { workspace = true }
# Cross-protocol social-relation aggregation (#1728): the visible-note-relations
# action Chirp registers, and the engagement classifier. Split out of nmp-nip01.
nmp-relations = { workspace = true }
# NIP-02 (follow list, kind:3) + NIP-25 (reactions, kind:7). Chirp registers
# the crate's `FollowModule` / `UnfollowModule` / `ReactModule` against the
# kernel action registry ŌĆö this is the D0-clean replacement for the deleted
# per-verb `nmp_app_follow` / `nmp_app_unfollow` / `nmp_app_react` C symbols.
# Lifted out of `crates/nmp-app-chirp/src/ffi/actions.rs` so any Nostr
# app on top of NMP wires the social graph with a single
# `nmp_nip02::register_actions(app)` call (Opus direction review #10
# 30-day call). D0-clean: `nmp-core` gains no NIP-02 / NIP-25 nouns.
nmp-nip02 = { workspace = true }
# NIP-25 reactions ŌĆö the `ReactAction` / `UnreactAction` typed payload encoders
# for the `nmp.nip25.{react,unreact}` byte-doorway dispatch (Cut-B caller slice,
# #1756). `ReactAction` is also re-exported via nmp-nip02, but `UnreactAction`
# is not, so the direct dep names both from one place.
nmp-nip25 = { workspace = true }
# NIP-17 DM action input type used by Chirp's Rust-owned action-spec builders.
nmp-nip17 = { workspace = true }
# NIP-05 pure parser + native `.well-known/nostr.json` resolver. Chirp uses this
# only from its app-owned zap-identifier composition action; `nmp-nip57` remains
# the protocol zap crate and does not depend on NIP-05.
nmp-nip05 = { workspace = true, features = ["native"] }
# NIP-22 comment runtime for explicit owner composition.
nmp-nip22 = { workspace = true }
# NIP-29 relay-based groups. Chirp registers the crate's typed
# `JoinRequestAction` `ActionModule` against the kernel action registry ŌĆö
# proving the host-extensibility seam works for NIP-crate modules, not just
# Chirp's own social verbs. D0-clean: `nmp-core` gains no group nouns.
nmp-nip29 = { workspace = true }
# NIP-51 list runtimes (mute, bookmarks, search relays) composed explicitly.
nmp-nip51 = { workspace = true }
# NIP-84 highlights composed explicitly through its protocol descriptor.
nmp-nip84 = { workspace = true }
# NIP-57 lightning zaps ŌĆö direct dep for the Chirp-specific NIP-57 zap
# action/runtime support.
nmp-nip57 = { workspace = true }
# NIP-65 relay-list + NIP-51 blocked-relay typed payload encoders
# (`PublishRelayListInput` / `BlockRelayInput` / `UnblockRelayInput`) for the
# byte-doorway dispatch of `nmp.nip65.publish_relay_list` and
# `nmp.nip51.{block,unblock}_relay` (Cut-B caller slice, #1756). The router's
# action modules are wired explicitly by `nmp-substrate`; this dep is also used
# for typed payload encoders the host-side dispatch needs.
nmp-router = { workspace = true }
# NIP-89 client identity ŌĆö vocabulary for relay User-Agent + public client tag.
nmp-nip89 = { workspace = true }
# V-38: NIP-47 NWC wallet stack moved out of `nmp-core`. Optional + gated
# behind the `wallet` feature so the default-off build excludes it.
nmp-nip47 = { workspace = true, optional = true }
nmp-threading = { workspace = true }
# WOT bootstrap/scoring runtime composed explicitly.
nmp-wot = { workspace = true }
# Long-form projection composed explicitly.
nmp-content = { workspace = true }
flatbuffers = { workspace = true }
# `nostr` reconstructs typed `Event` / `Keys` / `PublicKey` / `RelayUrl`
# values from the C-ABI JSON and builds the kind:444 message rumor.
# Pinned to the workspace `0.44` graph (nmp-core + mdk-core re-export the
# same graph ŌĆö no version duplication).
nostr = { version = "0.44", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize.workspace = true

[dev-dependencies]
# Test-support gates expose native-runtime test helpers so the FFI smoke tests
# can spin up a real `NmpApp` rather than mocking the slot. Matches the pattern
# in the other protocol crates (e.g. `nmp-nip01`).
nmp-core = { workspace = true, features = ["test-support"] }
nmp-native-runtime = { workspace = true, features = ["test-support", "signer-broker"] }
# `nmp-codegen` supplies `SNAPSHOT_PROJECTIONS` for the registry-coverage gate
# (`ffi::tests::producer_completeness::every_codegen_registry_key_is_registered_at_runtime`)
# ŌĆö every json_key the Swift codegen promises to decode must be a key the
# kernel actually registers at runtime. Dev-only: the registry is a codegen
# artifact, never a production dependency of the app crate.
nmp-codegen = { workspace = true }
# Layer-0 event-kind vocabulary used by FFI seam tests; NIP-29 no longer owns
# kind:9 constants.
nmp-kinds = { workspace = true }
# `nmp-nip59` supplies the `gift_wrap` primitive used in the DM-inbox
# round-trip tests so the test fixtures construct kind:1059 envelopes through
# the same production path the inbox unwraps (mirroring the unit tests in
# `crates/nmp-nip17/src/inbox.rs`). Dev-only ŌĆö Chirp depends on `nmp-nip17`
# in production but never calls the gift-wrap primitive directly.
nmp-nip59 = { workspace = true }
