[package]
name = "nmp-chirp-android-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chirp-owned Android JNI/UniFFI delivery surface (Layer 6, Chirp app)."

[lib]
name = "nmp_android_ffi"
crate-type = ["cdylib"]

# The [[bin]] entry for uniffi-bindgen is gated behind `bindgen-cli` so that
# the clap/camino deps do NOT enter the production cdylib build.  To regenerate
# Kotlin bindings run:
#   cargo run --bin uniffi-bindgen \
#     --manifest-path crates/nmp-chirp-android-ffi/Cargo.toml \
#     --features bindgen-cli -- \
#     generate --library <path-to-libnmp_android_ffi.dylib> \
#     --crate nmp_chirp_android_ffi --language kotlin \
#     --config crates/nmp-chirp-android-ffi/uniffi.toml \
#     --out-dir android/app/src/main/java --no-format
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen-cli"]

[features]
# Gate the uniffi-bindgen CLI binary to keep clap/camino out of the .so.
bindgen-cli = ["uniffi/cli"]

[dependencies]
# Path-dep on the SAME kernel the iOS app consumes.
nmp-core = { workspace = true }
nmp-feed = { workspace = true }
# Chirp app composition: registers the modular timeline observer and provides
# Chirp-specific account creation with product seed follows.
nmp-app-chirp = { path = "../nmp-app-chirp", default-features = false, features = ["android-ffi"] }
# Chirp reference-client relay bootstrap shared with the TUI/REPL surfaces.
nmp-chirp-config = { path = "../nmp-chirp-config" }
jni = "0.21"
serde_json = "1.0"
# Secret zeroization for the restored nsec that crosses the JNI seam (D13).
# The `std` feature is required for the `Zeroize for CString` impl used in
# identity.rs (the impl is gated behind `feature = "std"` in the zeroize crate).
zeroize = { version = "1", features = ["std"] }
# UniFFI proc-macro runtime + scaffolding generator (M14-0 / issue #2129).
# PINNED to 0.29.5: the Kotlin bindings in android/...uniffi/
# were generated with exactly this version.  Change with:
#   1. Bump here AND in the [[bin]] invocation comment above.
#   2. Re-run the generate command.
#   3. Check in regenerated Kotlin.
#   4. Run ci/check-uniffi-kotlin-drift.sh to verify no drift.
uniffi = { version = "=0.29.5" }
